web/.happypack/s-306226594
SyntaxError: Unexpected token (10:19)

[0m [90m  8 | [39m            [33m<[39m[33mdiv[39m className[33m=[39m[32m"row"[39m[33m>[39m
 [90m  9 | [39m                [33m<[39m[33mdiv[39m className[33m=[39m[32m"col-sm-3"[39m[33m>[39m
[31m[1m>[22m[39m[90m 10 | [39m                  [33m<[39m[33m![39m[33m--[39m [33m<[39m[33ma[39m href[33m=[39m[32m"#"[39m className[33m=[39m[32m"brand_logo"[39m[33m>[39m[33mVivu[39m[33m<[39m[33m/[39m[33ma[39m[33m>[39m [33m--[39m[33m>[39m
 [90m    | [39m                   [31m[1m^[22m[39m
 [90m 11 | [39m                  [33m<[39m[33mh3[39m className[33m=[39m[32m"footer_title"[39m[33m>[39m[33mHỗ[39m trợ khách hàng[33m<[39m[33m/[39m[33mh3[39m[33m>[39m
 [90m 12 | [39m                  [33m<[39m[33mul[39m className[33m=[39m[32m"footer_lists"[39m[33m>[39m
 [90m 13 | [39m                      [33m<[39m[33mli[39m[33m>[39m[0m

BabelLoaderError: SyntaxError: Unexpected token (10:19)

[0m [90m  8 | [39m            [33m<[39m[33mdiv[39m className[33m=[39m[32m"row"[39m[33m>[39m
 [90m  9 | [39m                [33m<[39m[33mdiv[39m className[33m=[39m[32m"col-sm-3"[39m[33m>[39m
[31m[1m>[22m[39m[90m 10 | [39m                  [33m<[39m[33m![39m[33m--[39m [33m<[39m[33ma[39m href[33m=[39m[32m"#"[39m className[33m=[39m[32m"brand_logo"[39m[33m>[39m[33mVivu[39m[33m<[39m[33m/[39m[33ma[39m[33m>[39m [33m--[39m[33m>[39m
 [90m    | [39m                   [31m[1m^[22m[39m
 [90m 11 | [39m                  [33m<[39m[33mh3[39m className[33m=[39m[32m"footer_title"[39m[33m>[39m[33mHỗ[39m trợ khách hàng[33m<[39m[33m/[39m[33mh3[39m[33m>[39m
 [90m 12 | [39m                  [33m<[39m[33mul[39m className[33m=[39m[32m"footer_lists"[39m[33m>[39m
 [90m 13 | [39m                      [33m<[39m[33mli[39m[33m>[39m[0m

    at transpile (/home/wladek/NetBeansProjects/SimpleWebApp/web/node_modules/babel-loader/lib/index.js:61:13)
    at Object.module.exports (/home/wladek/NetBeansProjects/SimpleWebApp/web/node_modules/babel-loader/lib/index.js:163:20)
    at applySyncOrAsync (/home/wladek/NetBeansProjects/SimpleWebApp/web/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/home/wladek/NetBeansProjects/SimpleWebApp/web/node_modules/happypack/lib/applyLoaders.js:268:5)
    at /home/wladek/NetBeansProjects/SimpleWebApp/web/node_modules/happypack/lib/applyLoaders.js:131:7
    at applyPitchLoader (/home/wladek/NetBeansProjects/SimpleWebApp/web/node_modules/happypack/lib/applyLoaders.js:184:14)
    at applyPitchLoader (/home/wladek/NetBeansProjects/SimpleWebApp/web/node_modules/happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoaders (/home/wladek/NetBeansProjects/SimpleWebApp/web/node_modules/happypack/lib/applyLoaders.js:222:4)
    at applyLoaders (/home/wladek/NetBeansProjects/SimpleWebApp/web/node_modules/happypack/lib/applyLoaders.js:116:3)
    at HappyWorker.compile (/home/wladek/NetBeansProjects/SimpleWebApp/web/node_modules/happypack/lib/HappyWorker.js:32:3)
    at Object.compile (/home/wladek/NetBeansProjects/SimpleWebApp/web/node_modules/happypack/lib/HappyForegroundThreadPool.js:61:14)
    at HappyPlugin.compileAndUpdateCache (/home/wladek/NetBeansProjects/SimpleWebApp/web/node_modules/happypack/lib/HappyPlugin.js:344:14)
    at HappyPlugin.compileInForeground (/home/wladek/NetBeansProjects/SimpleWebApp/web/node_modules/happypack/lib/HappyPlugin.js:321:25)
    at HappyPlugin.compile (/home/wladek/NetBeansProjects/SimpleWebApp/web/node_modules/happypack/lib/HappyPlugin.js:237:32)
    at Object.HappyLoader (/home/wladek/NetBeansProjects/SimpleWebApp/web/node_modules/happypack/lib/HappyLoader.js:42:15)
    at WEBPACK_CORE_LOADER_EXECUTION (/home/wladek/NetBeansProjects/SimpleWebApp/web/node_modules/webpack-core/lib/NormalModuleMixin.js:155:71)
    at runSyncOrAsync (/home/wladek/NetBeansProjects/SimpleWebApp/web/node_modules/webpack-core/lib/NormalModuleMixin.js:155:93)
    at nextLoader (/home/wladek/NetBeansProjects/SimpleWebApp/web/node_modules/webpack-core/lib/NormalModuleMixin.js:290:3)
    at /home/wladek/NetBeansProjects/SimpleWebApp/web/node_modules/webpack-core/lib/NormalModuleMixin.js:259:5
    at Storage.finished (/home/wladek/NetBeansProjects/SimpleWebApp/web/node_modules/enhanced-resolve/lib/CachedInputFileSystem.js:38:16)
    at /home/wladek/NetBeansProjects/SimpleWebApp/web/node_modules/graceful-fs/graceful-fs.js:78:16
    at FSReqWrap.readFileAfterClose [as oncomplete] (fs.js:445:3)